--- a/Example/AiLevelTestKit/Base.lproj/Main.storyboard
+++ b/Example/AiLevelTestKit/Base.lproj/Main.storyboard
@@ -1,30 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GkN-XP-75Q">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Navigation Controller-->
+        <scene sceneID="MKh-U0-0n2">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="AiLevelTestKit_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <navigationController id="GkN-XP-75Q" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qPc-Eg-mo6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="V0Y-5o-fEJ" kind="relationship" relationship="rootViewController" id="lkq-f6-icm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dbp-Z5-h99" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-682" y="690"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="Ii2-Fk-kl5">
+            <objects>
+                <viewController id="V0Y-5o-fEJ" customClass="LoginViewController" customModule="AiLevelInternalTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vg7-xH-ejE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="그룹코드 : " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTn-fo-Lnw">
+                                <rect key="frame" x="20" y="84" width="89" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="89" id="QKk-s2-ZWS"/>
+                                    <constraint firstAttribute="height" constant="21" id="o26-rK-0Zb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아이디 : " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpf-tF-LlR">
+                                <rect key="frame" x="20" y="125" width="89" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="aeq-PK-DT3">
+                                <rect key="frame" x="126" y="77.5" width="229" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="G92-Dp-3Tr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <connections>
+                                    <action selector="textFieldDidChange:" destination="V0Y-5o-fEJ" eventType="editingChanged" id="1dL-ZS-ums"/>
+                                    <action selector="textFieldDidEndOnExit:" destination="V0Y-5o-fEJ" eventType="editingDidEndOnExit" id="ZEE-QC-zfI"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="4ko-bE-wRV">
+                                <rect key="frame" x="126" y="118.5" width="229" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="bpK-eR-3db"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <connections>
+                                    <action selector="textFieldDidChange:" destination="V0Y-5o-fEJ" eventType="editingChanged" id="qyS-V2-Pbn"/>
+                                    <action selector="textFieldDidEndOnExit:" destination="V0Y-5o-fEJ" eventType="editingDidEndOnExit" id="i6B-4J-cIS"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5EL-KZ-vVv">
+                                <rect key="frame" x="68" y="192" width="238" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="P8y-qy-2Wo"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="login:" destination="V0Y-5o-fEJ" eventType="touchUpInside" id="9pd-Vc-s5P"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hox-Z5-isg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aeq-PK-DT3" firstAttribute="centerY" secondItem="aTn-fo-Lnw" secondAttribute="centerY" id="6og-FY-Wn7"/>
+                            <constraint firstItem="aTn-fo-Lnw" firstAttribute="leading" secondItem="hox-Z5-isg" secondAttribute="leading" constant="20" id="7fr-L0-XLo"/>
+                            <constraint firstItem="qpf-tF-LlR" firstAttribute="top" secondItem="aTn-fo-Lnw" secondAttribute="bottom" constant="20" id="DLa-TG-f3f"/>
+                            <constraint firstItem="qpf-tF-LlR" firstAttribute="height" secondItem="aTn-fo-Lnw" secondAttribute="height" id="JUg-sX-Msa"/>
+                            <constraint firstItem="4ko-bE-wRV" firstAttribute="leading" secondItem="qpf-tF-LlR" secondAttribute="trailing" constant="17" id="Jtj-kV-o3v"/>
+                            <constraint firstItem="hox-Z5-isg" firstAttribute="trailing" secondItem="5EL-KZ-vVv" secondAttribute="trailing" constant="69" id="OHE-Ni-Kxv"/>
+                            <constraint firstItem="5EL-KZ-vVv" firstAttribute="top" secondItem="4ko-bE-wRV" secondAttribute="bottom" constant="39.5" id="Oj0-RH-Qpo"/>
+                            <constraint firstItem="aeq-PK-DT3" firstAttribute="leading" secondItem="aTn-fo-Lnw" secondAttribute="trailing" constant="17" id="Swc-Ye-YSK"/>
+                            <constraint firstItem="4ko-bE-wRV" firstAttribute="height" secondItem="aeq-PK-DT3" secondAttribute="height" id="XnP-oE-6CB"/>
+                            <constraint firstItem="aTn-fo-Lnw" firstAttribute="top" secondItem="hox-Z5-isg" secondAttribute="top" constant="40" id="acL-4n-I1j"/>
+                            <constraint firstItem="5EL-KZ-vVv" firstAttribute="leading" secondItem="hox-Z5-isg" secondAttribute="leading" constant="68" id="dx3-IW-lNF"/>
+                            <constraint firstItem="4ko-bE-wRV" firstAttribute="trailing" secondItem="aeq-PK-DT3" secondAttribute="trailing" id="dxW-8Y-xSL"/>
+                            <constraint firstItem="qpf-tF-LlR" firstAttribute="width" secondItem="aTn-fo-Lnw" secondAttribute="width" id="hVT-wp-6tB"/>
+                            <constraint firstItem="qpf-tF-LlR" firstAttribute="leading" secondItem="aTn-fo-Lnw" secondAttribute="leading" id="j3Z-Un-oRJ"/>
+                            <constraint firstItem="4ko-bE-wRV" firstAttribute="centerY" secondItem="qpf-tF-LlR" secondAttribute="centerY" id="lLN-av-duU"/>
+                            <constraint firstItem="hox-Z5-isg" firstAttribute="trailing" secondItem="aeq-PK-DT3" secondAttribute="trailing" constant="20" id="xk6-Ab-bkS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ff2-CG-XbL"/>
+                    <connections>
+                        <outlet property="_buttonStart" destination="5EL-KZ-vVv" id="tdP-WB-Rgl"/>
+                        <outlet property="_labelGroupCode" destination="aTn-fo-Lnw" id="K19-VK-HAU"/>
+                        <outlet property="_labelId" destination="qpf-tF-LlR" id="6m5-5o-YCT"/>
+                        <outlet property="_textfieldGroupCode" destination="aeq-PK-DT3" id="38v-Ez-z31"/>
+                        <outlet property="_textfieldId" destination="4ko-bE-wRV" id="fxM-9F-CcA"/>
+                        <outlet property="view" destination="vg7-xH-ejE" id="4Uy-9H-uiR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S0f-8g-mh9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="218.84057971014494" y="689.73214285714278"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
